--- a/content/articles/135.speaking-at-dotnet2024.md
+++ b/content/articles/135.speaking-at-dotnet2024.md
@@ -16,15 +16,15 @@ layout: article
 
 ---
 
-On June 25th, I spoke at the [dotnet2024](https://dotnetconfspain.com/) conference in Madrid, Spain. My session was titled: *Failure is not an option: Durable Execution + Dapr = 🚀* and covered how [Dapr](https://dapr.io) has built-in features and APIs that helps developers building resilient distributed applications.
+On June 25th, I spoke at the [*dotnet2024*](https://dotnetconfspain.com/) conference in Madrid, Spain. My session was titled: *Failure is not an option: Durable Execution + Dapr = 🚀* and covered how [Dapr](https://dapr.io) has built-in features and APIs that helps developers building resilient distributed applications.
 
 This was the first conference session where I only used VSCode for both slides and demos (no PowerPoint or Keynote). I'm using the [CodeTour extension](https://marketplace.visualstudio.com/items?itemName=vsls-contrib.codetour) to drive the presentation. Please have a look at the [GitHub repo](https://github.com/diagrid-labs/dapr-resiliency-and-durable-execution) with the demos and slides, clone it locally and give CodeTour a try! 
 
-I finally got the opportunity to meet [Scott Hanselman](https://www.hanselman.com/) who gave a great keynote session at this conference. He really is an inspiration to me, he is very thoughful in everything he does, and a very skilled speaker.
+I finally got the opportunity to meet [Scott Hanselman](https://www.hanselman.com/) who gave a great keynote session at this conference! He really is an inspiration to me, he is very thoughful in everything he does, and such a skilled speaker.
 
 ![Speaking at dotent2024](/articles/2024/135.2.dotnet2024.jpg)
 
-Thanks to Unai Zorilla Castra ([Plain Concepts](https://www.plainconcepts.com/)) and other organizers of dotnet2024 for inviting me, making me feel welcome, and creating such a good conference! It was great meeting with both old and new speaker friends there. I hope to be another time!
+Thanks to Unai Zorilla Castra ([Plain Concepts](https://www.plainconcepts.com/)) and the other organizers of *dotnet2024* for inviting me, making me feel welcome, and creating such a good conference! It was great meeting with both old and new speaker friends there. I hope to be another time!
 
 ---
 
