--- a/content/articles/136.mcing-at-azure-lowlands-2024.md
+++ b/content/articles/136.mcing-at-azure-lowlands-2024.md
@@ -14,12 +14,12 @@ layout: article
 
 ---
 
-On June 27th I was at Azure & AI Lowlands, Utrecht, The Netherlands. Not as a speaker this time, but I was MC-ing 🎤 in one of the rooms. I'm a big fan of the Azure Lowlands conferences, they alway have a good mix of topics, diverse speakers, and plenty of entertainment. The theme of this year was *'The 80s'* 🤩 and the opening act was a singing group of roller skaters, a skateboarder, and a BMX rider performing stunts on a half pipe! 🤯
+On June 27th I was at Azure & AI Lowlands, Utrecht, The Netherlands. Not as a speaker this time, but I was MC-ing 🎤 in one of the rooms. I'm a big fan of the Azure Lowlands conferences, I love the venue *The Fabrique*, an old industrial venue, and the conference always has a good mix of topics, diverse speakers, and plenty of entertainment. The theme of this year was *'The 80s'* 🤩 and the opening act was a singing group of roller skaters, a skateboarder, and a BMX rider performing stunts on a half pipe! 🤯
 
 I really enjoy MC-ing! I met many new speakers and listened to sessions which I probably wouldn't attend normally. Since I was MC-ing in the *Thriller* room, I presented a small fact about the Thriller music video each time a new session started.
 
 ![KITT at Azure Lowlands](/articles/2024/136.3.azurelowlands2024.jpg)
 
-The organizers did a great job withe the 80s theme. There were 80s characters, cars (KITT, Ecto-1, A-team van) and of course lots of 80s music. I had a great time at Azure & AI Lowlands, and I'm looking forward to the next edition!
+The organizers did a great job with the 80s theme. There were 80s characters, cars (KITT, Ecto-1, A-team van), and of course lots of 80s music. I had a great time at Azure & AI Lowlands, and I'm looking forward to the next edition!
 
 ![Ecto-1 at Azure Lowlands](/articles/2024/136.2.azurelowlands2024.jpg)
