--- a/content/articles/135.speaking-at-dotnet2024.md
+++ b/content/articles/135.speaking-at-dotnet2024.md
@@ -24,7 +24,7 @@ I finally got the opportunity to meet [Scott Hanselman](https://www.hanselman.co
 
 ![Speaking at dotent2024](/articles/2024/135.2.dotnet2024.jpg)
 
-Thanks to Unai Zorilla Castra ([Plain Concepts](https://www.plainconcepts.com/)) and the other organizers of *dotnet2024* for inviting me, making me feel welcome, and creating such a good conference! It was great meeting with both old and new speaker friends there. I hope to be another time!
+Thanks to Unai Zorilla Castra ([Plain Concepts](https://www.plainconcepts.com/)) and the other organizers of *dotnet2024* for inviting me, making me feel welcome, and creating such a good conference! It was great meeting with both old and new speaker friends there. I hope to come back another time!
 
 ---
 
