--- a/content/articles/136.mcing-at-azure-lowlands-2024.md
+++ b/content/articles/136.mcing-at-azure-lowlands-2024.md
@@ -14,9 +14,9 @@ layout: article
 
 ---
 
-On June 27th I was at Azure & AI Lowlands, Utrecht, The Netherlands. Not as a speaker this time, but I was MC-ing 🎤 in one of the rooms. I'm a big fan of the Azure Lowlands conferences, I love the venue *The Fabrique*, an old industrial venue, and the conference always has a good mix of topics, diverse speakers, and plenty of entertainment. The theme of this year was *'The 80s'* 🤩 and the opening act was a singing group of roller skaters, a skateboarder, and a BMX rider performing stunts on a half pipe! 🤯
+On June 27th I was at Azure & AI Lowlands, Utrecht, The Netherlands. Not as a speaker this time, but I was MC-ing 🎤 in one of the rooms! I'm a big fan of the Azure Lowlands conferences, I love the venue *The Fabrique*, an old industrial area, and the conference always has a good mix of topics, diverse speakers, and plenty of entertainment. The theme of this year was *'The 80s'* 🤩 and the opening act was a singing group of roller skaters, a skateboarder, and a BMX rider performing stunts on a half pipe! 🤯
 
-I really enjoy MC-ing! I met many new speakers and listened to sessions which I probably wouldn't attend normally. Since I was MC-ing in the *Thriller* room, I presented a small fact about the Thriller music video each time a new session started.
+I really enjoy MC-ing! I met many new speakers and listened to sessions which I probably wouldn't have attended normally. Since I was MC-ing in the *Thriller* room, I presented a small fact about the [Thriller music video](https://en.wikipedia.org/wiki/Michael_Jackson%27s_Thriller_(music_video)) each time a new session started.
 
 ![Marc Duiker and ET at Azure Lowlands](/articles/2024/136.4.azurelowlands2024.jpg)
 
