Add group picture
Signed-off-by: Marc Duiker <marcduiker@users.noreply.github.com>

--- a/content/articles/136.mcing-at-azure-lowlands-2024.md
+++ b/content/articles/136.mcing-at-azure-lowlands-2024.md
@@ -18,8 +18,10 @@ On June 27th I was at [Azure & AI Lowlands](https://azurelowlands.com/), Utrecht
 
 I really enjoy MC-ing! I met many new speakers and listened to sessions which I probably wouldn't have attended normally. Since I was MC-ing in the *Thriller* room, I presented a small fact about the [Thriller music video](https://en.wikipedia.org/wiki/Michael_Jackson%27s_Thriller_(music_video)) each time a new session started.
 
-![Marc Duiker and ET at Azure Lowlands](/articles/2024/136.4.azurelowlands2024.jpg)
+![Azure Lowlands speakers and org](/articles/2024/136.5.azurelowlands2024.jpg)
 
 The organizers did a great job with the 80s theme. There were 80s characters, cars (KITT, Ecto-1, A-team van), and of course lots of 80s music. I had a great time at Azure & AI Lowlands, and I'm looking forward to the next edition!
+
+![Marc Duiker and ET at Azure Lowlands](/articles/2024/136.4.azurelowlands2024.jpg)
 
 ![KITT at Azure Lowlands](/articles/2024/136.3.azurelowlands2024.jpg)
