Add sketches, fxhash and profile

--- a/content/1.index.md
+++ b/content/1.index.md
@@ -15,7 +15,11 @@ When I'm not working to improve the developer experience, I am either drawing so
 
 Check the [about page](/about) if you want to contact me. See you around! 👋
 
-![Marc Duiker pixelart avatar](/marcduiker_dapr_rainbow_eyes.gif)
+<div class="biopics">
+    <img src="bio/marcduiker_dapr_rainbow.png" width="200">
+    <img src="bio/_md.gif" width="200">
+    <img src="bio/marcduiker_speaking.jpg" width="200">
+</div>
 
 ::card-grid
 #title
