--- a/content/4.pixelart.md
+++ b/content/4.pixelart.md
@@ -22,7 +22,7 @@ For KubeCon Paris 2024, I made a Dapr inspired retro game that people played at 
 You can commission me to create pixel art via [ko-fi](https://ko-fi.com/marcduiker/commissions). If the existing options there are not to your liking, please contact me via [Twitter](https://twitter.com/marcduiker) or [Mastodon](https://mstdn.social/@marcduiker) to discuss your wishes.
 
 ::alert{type="danger"}
-I do **not** take on NFT-related work. Do not use my existing work for NFTs.
+I do **not** take on NFT-related pixel art work. Do not use my existing work for NFTs.
 ::
 
 ::card-grid
