--- a/content/5.creative-coding.md
+++ b/content/5.creative-coding.md
@@ -11,13 +11,25 @@ If you're interested in learning (visual) creative coding, I can definitely reco
 
 Creative coding is ideal for educational purposes. It's very rewarding for students to see (or hear) the result of their coding exercises.
 
-## P5js sketches
+## Digital generative art
 
-Here are some sketches I made with [P5js](https://p5js.org/), a JavaScript library for creative coding based on [Processing](https://processing.org/). 
+I create generative art under the pseudonym of **_md**. I mostly use JavaScript with [P5js](https://p5js.org/), a library for creative coding based on [Processing](https://processing.org/). 
+
+**You can buy my digital art on [fx(hash)](https://www.fxhash.xyz/u/_md).**
+
+## Open source sketches
+
+Here are some of my p5js sketches hosted on [OpenProcessing](https://openprocessing.org/user/146781?o=5&view=sketches), you view the artworks but also inspect the source code and learn from it to make your own!
+
+**Pixels** 
+
+This is an interactive sketch, move the mouse (or touch) to change the pixel color variation.
+
+<iframe src="https://openprocessing.org/sketch/2137654/embed/" width="800" height="500"></iframe>
 
 **Space Debris**
 
-<iframe src="https://openprocessing.org/sketch/2121413/embed/" width="500" height="400"></iframe>
+<iframe src="https://openprocessing.org/sketch/2121413/embed/" width="800" height="500"></iframe>
 
 
 **Perfect loop**
@@ -34,9 +46,3 @@ This is an interactive sketch, click around the center of the sketch and the dra
 
 This is an interactive sketch, use the sliders to control the number of nodes and angle of rotation.
 <iframe src="https://openprocessing.org/sketch/1432049/embed/" width="500" height="500"></iframe>
-
-**Pixelart drawing tool**
-
-This is an interactive sketch, click in the cells to draw. Clicking a cell multiple times will change the color.
-
-<iframe src="https://openprocessing.org/sketch/1923697/embed/" width="500" height="600"></iframe>
