--- a/src/common/404.md
+++ b/src/common/404.md
@@ -6,9 +6,9 @@ eleventyExcludeFromCollections: true
 excludeFromSitemap: true
 ---
 
-## Sorry, that page doesn't exist!
+## WTF! This page doesn't exist! ☠️ 😱
 
-[Please try visiting the home page!](/)
+[Stay safe and go the home page.](/)
 
-Please let me know if you encounter more errors:
-<a href="mailto:{{ meta.creator.email }}">{{ meta.creator.email }}</a>
+Know how to use GitHub? Please [submit an issue](https://github.com/marcduiker/marcduiker-dev/issues/new) to help improve the experience for everyone.
+
